@@ -2945,7 +2945,7 @@ SUB usedoor (byval door_id as integer)
  FOR i = 0 TO 199
   WITH gam.map.doorlinks(i)
    IF door_id = .source THEN
-    IF istag(.tag1, -1) AND istag(.tag2, -1) THEN 'Check tags to make sure this door is okay
+    IF istag(.tag1, YES) AND istag(.tag2, YES) THEN 'Check tags to make sure this door is okay
      gam.map.id = .dest_map
      destdoor = .dest
      deserdoors game + ".dox", gam.map.door(), gam.map.id
