@@ -28,7 +28,9 @@ define constant(11, assert expression string)
 plotscript, run all tests, begin
   suspend player
   seed random(4444)
+  string tests
   math tests
+  door tests
   hero tests
   trigger tests
   npc tests
@@ -1472,6 +1474,32 @@ script, battle timer test, begin
   append number(0, timer global)
   trace(0)
   show string(0), w
+end
+
+########################################################################
+
+script, string tests, begin
+  # There are tons more string commands we could test here!
+  $0="String tests", trace(0)
+  
+  $1="SelfStab"
+  read attack name(2, 0 + 1)
+  assert(string compare(1,2))
+  
+  $1="Attack self"
+  read attack caption(2, 0 + 1)
+  assert(string compare(1,2))
+end
+
+########################################################################
+
+script, door tests, begin
+  $0="Door tests"
+  assert(get door x(0) == 8)
+  assert(get door y(0) == 5)
+  assert(get door destination id(0) == 1)
+  assert(get door destination map(0) == 4)
+  assert(door is active(0))
 end
 
 ########################################################################
